--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="info-detail">
   These languages are the backbone of every website, defining structure, content, and presentation.</div>
 
-  <div class="image-profile"><img src="C:\Users\Admin\Downloads\blog-preview-card-main (1)\blog-preview-card-main\assets\images\image-avatar.webp"><span> Greg Hooper</span></div>
+  <div class="image-profile"><img src="assets\images\image-avatar.webp"><span> Greg Hooper</span></div>
 </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
